# my-reporting-app

./: complete_project_walkthrough.md
pfe-project/: .env.example  README.md  pyproject.toml
pfe-project/app/: config.py  logging_config.py  main.py
pfe-project/app/annotation/: bootstrap.py  cli.py  client.py  exporter.py  guidelines.py  label_studio_config.py  quality.py  schema.py  task_builder.py
pfe-project/app/api/: job_store.py  routes.py  schemas.py
pfe-project/app/database/: __init__.py  models.py  repositories.py  session.py
pfe-project/app/file_processing/: __init__.py  document_extractor.py
pfe-project/app/kpi/: __init__.py  metrics.py
pfe-project/app/ml/: __init__.py  cli.py  confidence_scorer.py  ner_extractor.py  ner_trainer.py
pfe-project/app/pipeline/: __init__.py  batch_processor.py  decision_engine.py
pfe-project/deploy/label_studio/: .env.example  docker-compose.yml
pfe-project/docs/annotation/: README.md  annotation_guidelines.md  invoice_schema.json  label_studio_config.xml  sample_annotator_a.json  sample_annotator_b.json  spacy_predicted_sample.jsonl  spacy_train.jsonl  spacy_train_demo_multi.jsonl  spacy_validation_split.jsonl  training_export.json
pfe-project/docs/source_documents/: invoice_001.txt  invoice_002.json  invoice_003.csv
pfe-project/scripts/: bootstrap_label_studio.sh
pfe-project/tests/: test_main.py
pfe-project/tests/annotation/: test_bootstrap_and_exporter.py  test_cli.py  test_quality.py  test_schema_and_config.py  test_spacy_export.py  test_task_builder_and_export_parser.py
(+11 files in other folders)
